--- a/monolith/src/main/resources/application.properties
+++ b/monolith/src/main/resources/application.properties
@@ -18,6 +18,6 @@ spring.datasource.driver-class-name			      = com.mysql.jdbc.Driver
 spring.jpa.properties.hibernate.dialect 		      = org.hibernate.dialect.MySQL5InnoDBDialect
 spring.jpa.properties.hibernate.current_session_context_class = org.springframework.orm.hibernate5.SpringSessionContext
 spring.jpa.hibernate.ddl-auto 				      = update
-spring.datasource.url 					      = jdbc:mysql://localhost/ecommerce?useSSL=false
+spring.datasource.url 					      = jdbc:mysql://localhost:3306/ecommerce?enabledTLSProtocols=TLSv1.2
 spring.datasource.username 				      = root
 spring.datasource.password 				      = root
