--- a/monolith/src/main/resources/application.properties
+++ b/monolith/src/main/resources/application.properties
@@ -14,10 +14,16 @@
 
 server.servlet.session.timeout                  	      = 100000
 server.servlet.session.cookie.max-age           	      = 100000
-spring.datasource.driver-class-name			      = com.mysql.jdbc.Driver
-spring.jpa.properties.hibernate.dialect 		      = org.hibernate.dialect.MySQL5InnoDBDialect
+#spring.datasource.driver-class-name			      = com.mysql.cj.jdbc.Driver
+#spring.jpa.properties.hibernate.dialect 		      = org.hibernate.dialect.MySQL5InnoDBDialect
 spring.jpa.properties.hibernate.current_session_context_class = org.springframework.orm.hibernate5.SpringSessionContext
-spring.jpa.hibernate.ddl-auto 				      = update
-spring.datasource.url 					      = jdbc:mysql://localhost:3306/ecommerce?enabledTLSProtocols=TLSv1.2
-spring.datasource.username 				      = root
-spring.datasource.password 				      = root
+#spring.jpa.hibernate.ddl-auto 				      = update
+
+
+
+spring.datasource.url=jdbc:h2:mem:reto
+spring.datasource.driverClassName=org.h2.Driver
+spring.datasource.username=user
+spring.datasource.password=password
+spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
+
